Test(LottoTest): 등수 테스트
- 로또 번호에 따른 올바른 등수를 찾는지 테스트