@@ -1,14 +1,17 @@
 package lotto;
 
-import org.junit.jupiter.api.BeforeEach;
+import java.util.Arrays;
+import javax.swing.JApplet;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 class LottoTest {
     @DisplayName("로또 번호의 개수가 6개가 넘어가면 예외가 발생한다.")
@@ -59,14 +62,56 @@ class LottoTest {
     @DisplayName("올바른 당첨 내역을 반환하는지 확인한다.")
     @Nested
     class checkWinningCTest {
-        @BeforeEach
-        void initWinningLotto() {
-            Lotto winningLotto = new Lotto(List.of(6, 5, 4, 3, 2, 1));
-        }
+
+        WinningLotto winningLotto = new WinningLotto(Arrays.asList(6, 5, 4, 3, 2, 1), 7);
 
         @Test
         void winFirstPlace() {
             Lotto userLotto = new Lotto(List.of(1, 2, 3, 4, 5, 6));
+            Winning winning = Application.getWinning(userLotto, winningLotto);
+
+            assertThat("FIRST".equals(winning.name())).isTrue();
+        }
+
+        @Test
+        void winSecondPlace() {
+            Lotto userLotto = new Lotto(List.of(1, 2, 3, 4, 5, 7));
+            Winning winning = Application.getWinning(userLotto, winningLotto);
+
+            assertThat("SECOND".equals(winning.name())).isTrue();
+        }
+
+        @Test
+        void winThirdPlace() {
+            Lotto userLotto = new Lotto(List.of(1, 2, 3, 4, 5, 9));
+            Winning winning = Application.getWinning(userLotto, winningLotto);
+
+
+            assertThat("THIRD".equals(winning.name())).isTrue();
+        }
+
+        @Test
+        void winForthPlace() {
+            Lotto userLotto = new Lotto(List.of(1, 2, 3, 4, 10, 11));
+            Winning winning = Application.getWinning(userLotto, winningLotto);
+
+            assertThat("FOURTH".equals(winning.name())).isTrue();
+        }
+
+        @Test
+        void winFifthPlace() {
+            Lotto userLotto = new Lotto(List.of(1, 2, 3, 10, 11, 12));
+            Winning winning = Application.getWinning(userLotto, winningLotto);
+
+            assertThat("FIFTH".equals(winning.name())).isTrue();
+        }
+
+        @Test
+        void winNoPlace() {
+            Lotto userLotto = new Lotto(List.of(10, 11, 12, 13, 14, 15));
+            Winning winning = Application.getWinning(userLotto, winningLotto);
+
+            assertNull(winning);
         }
     }
 }
